2005-06-18  Peter Kleiweg  <p.c.j.kleiweg@rug.nl>

	* progmodes/ps-mode.el: Update version and maintainer's email
	address.

2005-03-18  Steve Youngs  <steve@xemacs.org>

	* net/browse-url.el (browse-url-browser-function)
	(browse-url-default-browser): Add firefox.
	(browse-url-firefox-program, browse-url-firefox-arguments)
	(browse-url-firefox-startup-arguments)
	(browse-url-firefox-new-window-is-tab): New defcustoms.
	(browse-url-firefox, browse-url-firefox-sentinel): New functions.

2005-06-17  Richard M. Stallman  <rms@gnu.org>

	* startup.el (command-line): Warn if specified user name has
	no home directory.

	* term.el (term-get-old-input, term-input-filter, term-input-sender)
	(term-mode-hook, term-exec-hook, term-escape-char): Doc fixes.

	* longlines.el (longlines-mode, longlines-show-hard-newlines): 
	Doc fixes.

	* faces.el (underline): Try bold if terminal doesn't support underline.

	* mail/sendmail.el (mail-setup-with-from): New variable.
	(mail-insert-from-field): New function.
	(sendmail-send-it): Call it.
	(mail-setup): Optionally call it here.

	* term/linux.el: Call tty-no-underline.

2005-06-17  Luc Teirlinck  <teirllm@auburn.edu>

	* emacs-lisp/edebug.el (edebug-goto-here): Doc fix.

2005-06-17  Miles Bader  <miles@gnu.org>

	* ediff-init.el (ediff-current-diff-A, ediff-current-diff-B)
	(ediff-current-diff-C, ediff-current-diff-Ancestor)
	(ediff-fine-diff-A, ediff-fine-diff-B, ediff-fine-diff-C)
	(ediff-fine-diff-Ancestor, ediff-even-diff-A, ediff-even-diff-B)
	(ediff-even-diff-C, ediff-even-diff-Ancestor, ediff-odd-diff-A)
	(ediff-odd-diff-B, ediff-odd-diff-C, ediff-odd-diff-Ancestor):
	Remove "-face" suffix from face names.
	(ediff-current-diff-face-A, ediff-current-diff-face-B)
	(ediff-current-diff-face-C, ediff-current-diff-face-Ancestor)
	(ediff-fine-diff-face-A, ediff-fine-diff-face-B)
	(ediff-fine-diff-face-C, ediff-fine-diff-face-Ancestor)
	(ediff-even-diff-face-A, ediff-even-diff-face-B)